<resources>
    <string name="app_name">Medigo</string>
    <string name="email">מייל</string>
    <string name="password">סיסמה</string>
    <string name="log_in">התחברות</string>
    <string name="enter_password">הכנס סיסמה</string>
    <string name="confirm_password">אישור סיסמה</string>

    <string name="button_video">וידאו</string>
    <string name="addMedia">הוספת התראה</string>
    <string name="button_camera">תמונה</string>
    <string name="extercise_name_hint">שם התרגיל</string>
    <string name="no_of_repetitions">מספר חזרות:</string>
    <string name="repetitions">חזרות:</string>
    <string name="btn_confirm">אישור</string>

    <string name="Sunday_short">א</string>
    <string name="Monday_Short">ב</string>
    <string name="Tuesday_Short">ג</string>
    <string name="Wednesday_Short">ד</string>
    <string name="Thursday_Short">ה</string>
    <string name="Friday_Short">ו</string>

    <string name="select_days">Days:</string>
    <string name="Sunday">ראשון</string>
    <string name="Monday">שני</string>
    <string name="Tuesday">שלישי</string>
    <string name="Wednesday">רביעי</string>
    <string name="Thursday">חמישי</string>
    <string name="Friday">שישי</string>
    <string name="Saturday">שבת</string>

    <string name="alert_dialog_select_days">בחירת ימים להתראה</string>
    <string name="alert_dialog_set">אישור</string>
    <string name="alert_dialog_cancel">ביטול</string>
    <string name="btn_add_alert">הוסף התראה</string>
    <string name="part1_timeToDO"> הגיע הזמן לבצע</string>
    <string name="name_too_long">שם ארוך מידי (עד 16 תוים)</string>
    <string name="name_too_short">הכנס שם תרגיל</string>
    <string name="part2_repeats">מספר חזרות: </string>
    <string name="snooze">Remind me in</string>
    <string name="done">ביצעתי</string>
    <string name="giveup">ביטול</string>
    <string name="invalid_name">הכנס שם תרגיל</string>
    <string name="exercise_name_hint">שם התרגיל</string>
    <string name="all_alerts_deleted">כל ההתראות הוסרו</string>
    <string name="all_days">כל הימים</string>
    <string name="error_must_select_one_day">יש לבחור יום אחד לפחות</string>
    <string name="several_times">%d פעמים ביום</string>
    <string name="times_splitter">", "</string>
    <string name="last_alert">חייבת להיות לפחות התראה אחת</string>
    <string name="times_nice_separator">" | "</string>
    <string name="remove_all_alerts">להסיר את כל ההתראות?</string>
    <string name="delete_exercise_button">מחק</string>
    <string name="delete_exercise_confirm">למחוק את התרגיל?</string>
    <string name="exercise_deleted">התרגיל נמחק</string>
    <string name="medicine_deleted">התרופה נמחקה</string>
    <string name="reminders_deleted">התזכורת נמחקה</string>
    <string name="alert_text">Time to perform %1$s. <b>%2$s</b> %3$s.</string>
    <string name="alert_page_text" formatted="false">הגיע הזמן לבצע חזרות!</string>
    <string name="media_not_found">הסרט לא נמצא.</string>
    <string name="media_not_found_image">התמונה לא נמצאה.</string>

    <string name="good_job">כל הכבוד! קיבלת 10 נקודות</string>
    <string name="alert_cancelled">ההתראה בוטלה. ננסה בפעם הבאה.</string>
    <string name="alert_snoozed">See you in %1$s minutes</string>
    <string name="personal_info">מידע אישי</string>
    <string name="LastName">שם משפחה</string>
    <string name="FirstName">שם פרטי</string>
    <string name="EmailAddress">כתובת מייל</string>
    <string name="Points">נקודות</string>
    <string name="EditProfile">ערוך את הפרופיל שלך</string>

    <string name="AttachFailed">לא הצלחנו לקבל את התמונה או הסרט</string>
    <string name="AttachSuccessVideo">הסרט נקלט בהצלחה</string>
    <string name="AttachSuccessImage">התמונה נקלטה בהצלחה</string>
    <string name="AttachSuccessSound">הצלצול נקלט בהצלחה</string>
    <string name="reshootVideo">האם לצלם את התרגיל מחדש?</string>


    <string name="main_menu_title">תפריט ראשי</string>
    <string name="privacy">
        <a href="https://medigo44.wixsite.com/website/privacy">privacy</a>privacy</string>
    <string name="coming_soon">בבניה</string>
    <string name="menu_item_1">פיזיותרפיה</string>
    <string name="menu_item_2">תרופות</string>
    <string name="menu_item_3">בדיקות תקופתיות</string>
    <string name="menu_item_4">תזכורות אישיות</string>
    <string name="reminders">תזכורות</string>
    <string name="medicine">Drugs</string>
    <string name="exercises">תרגילים</string>

    <string name="exercise_name_label">Exercise name:</string>
    <string name="Add_multi_alert">כמה פעמים ביום?</string>
    <string name="set_language">Language</string>
    <string name="lang_heb" translatable="false">עברית</string>
    <string name="lang_eng" translatable="false">English</string>
    <string name="lang_rus" translatable="false">русский</string>
    <string name="lang_ara" translatable="false">عربيه</string>
    <string name="lang_default">Device default</string>
    <string name="notification_alert_prefix">Time to perform:</string>
    <string name="notification_alert_repeats">%1$d %2$s.</string>
    <string name="Saturday_Short">ש</string>

    <string name="ClearInfo">נקה מידע אישי</string>
    <string name="personal_profile">Personal profile</string>
    <string name="pointsGained">נקודות שצברת</string>
    <string name="possiblePoints">מקסימום יומי</string>

    <string name="you_gained_points">You gained\n%1$d points\nout of %2$d</string>
    <string name="points_msg_noexercises">No exercises to perform</string>
    <string name="points_msg_can_do_better">You can do better</string>
    <string name="points_msg_not_bad">You\'re getting close! You only need %1$d more points to reach the daily goal.</string>
    <string name="points_msg_very_good">Very good! You have almost reached the maximum possible points.</string>
    <string name="points_msg_well_done">Well done! You\'ve gained all possible points!</string>
    <string name="days_today">Today</string>
    <string name="days_yesterday">Yesterday</string>
    <string name="days_2_days_ago">2 days ago</string>
    <string name="days_days_ago">%1$d days ago</string>
    <string name="points_msg_well_done_prev">Well done! You gained the maximum possible points that day!</string>
    <string name="points_msg_very_good_prev">Very good! You almost reached the maximum possible points that day.</string>
    <string name="points_msg_not_bad_prev">You got close! You only needed %1$d more points to reach the daily goal that day.</string>
    <string name="points_msg_need_work">You need %1$d more points to reach the daily goal!</string>
    <string name="points_msg_need_work_prev"> </string>
    <string name="points_msg_noexercises_prev">You had no exercises to perform that day.</string>

    //description - no need to translate
    <string name="desc_pic_play">play the video</string>
    <string name="desc_pic_shoot">shoot the video</string>


    //medicine - TODO: need to translate
    <string name="medicine_name_label">שם תרופה:</string>
    <string name="reminders_name_label">Reminder Name:</string>
    <string name="medicine_amount">כמות:</string>
    <string name="medicine_type">סוג</string>
    <string name="medicine_special">הוראות מיוחדות:</string>
    <string name="medicine_notes">הערות</string>
    <string name="reminders_notes">הערות</string>

    <string name="medicine_dosage_type_title">בחירת סוג</string>
    <string name="medicine_dosage_type_tab">כדורים</string>
    <string name="medicine_dosage_type_capsule">קפסולות</string>
    <string name="medicine_dosage_type_ml_cc">מ\"ל (CC)</string>
    <string name="medicine_dosage_type_units">יחידות</string>
    <string name="medicine_dosage_type_patch">מדבקות</string>
    <string name="medicine_dosage_type_supp">פתילה (נר)</string>

    <string name="medicine_usage_notes_title">הוראות מיוחדות</string>
    <string name="medicine_usage_notes_none">ללא</string>
    <string name="medicine_usage_notes_before_meal">לפני האוכל</string>
    <string name="medicine_usage_notes_after_meal">אחרי האוכל</string>
    <string name="medicine_usage_notes_2_hours_before_meal">שעתיים לפני האוכל</string>
    <string name="medicine_usage_notes_2_hours_after_meal">שעתיים אחרי האוכל</string>


    <string name="reshootPic">האם לצלם את התרופה מחדש?</string>
    <string name="name_too_short_medicine">Enter medicine name</string>
    <string name="name_too_short_reminders">Enter reminders name</string>
    <string name="amount_too_short_medicine">Enter the amount.</string>
    <string name="delete_medicine_confirm">למחוק את התרופה?</string>
    <string name="delete_reminders_confirm">למחוק את התזכורת?</string>
    <string name="notification_alert_prefix_medicine">הגיע הזמן לקחת:</string>
    <string name="alert_text_medicine">Time to take <b>%d</b> %s</string>
    <string name="alert_text_reminders">Time to perform %1$s. %2$s</string>
    <string name="time_picker_select_time">Select time</string>
    <string name="lang_select" translatable="false">En | עב | عر | ру</string>
    <string name="exercise_repeats_mandatory">Enter no. of repititions.</string>
    <string name="medicine_dosage_drops">drops</string>
    <string name="medicine_dosage_other">other</string>
    <string name="tab_home">Home</string>
    <string-array name="drugs_dosage">
        <item>@string/medicine_dosage_type_tab</item>
        <item>@string/medicine_dosage_type_capsule</item>
        <item>@string/medicine_dosage_type_ml_cc</item>
        <item>@string/medicine_dosage_type_units</item>
        <item>@string/medicine_dosage_drops</item>
        <item>@string/medicine_dosage_type_patch</item>
        <item>@string/medicine_dosage_type_supp</item>
        <item>@string/medicine_dosage_other</item>
    </string-array>

    <string-array name="drugs_dosage_notes">
        <item>@string/medicine_usage_notes_none</item>
        <item>@string/medicine_usage_notes_before_meal</item>
        <item>@string/medicine_usage_notes_after_meal</item>
        <item>@string/medicine_usage_notes_2_hours_before_meal</item>
        <item>@string/medicine_usage_notes_2_hours_after_meal</item>
    </string-array>

    <string-array name="repetition_types">
        <item>@string/repetition_type_repetitions</item>
        <item>@string/repetition_type_minutes</item>
        <item>@string/repetition_type_seconds</item>
    </string-array>
    <string name="save_changes">Save changes?</string>
    <string name="repetition_type_repetitions">Repetitions</string>
    <string name="repetition_type_minutes">Minutes</string>
    <string name="repetition_type_seconds">Seconds</string>
    <string name="snooze_30">30 minutes</string>
    <string name="snooze_5">5 minutes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_reminders_data" translatable="false">RemindersData</string>
    <string name="exercise_sets_label">Sets</string>
</resources>
