<?xml version="1.0" encoding="utf-8"?>
<tabs>
    <tab
        id="@+id/tab_home"
        icon="@drawable/ic_home_black_36dp"
        title="@string/tab_home" />

    <tab
        id="@+id/tab_exercises"
        icon="@drawable/ic_rowing_black_30dp"
        title="@string/menu_item_1"
        />
    <tab
        id="@+id/tab_drugs"
        icon="@drawable/icons8_pill_25"
        title="@string/menu_item_2"
        />


    <tab
        id="@+id/tab_personal"
        icon="@drawable/ic_friends"
        title="@string/personal_profile"
        />

    <!--
       <tab
           id="@+id/tab_camera"
           icon="@drawable/ic_add_a_photo_black_24dp"
           title="Camera" />



   -->

     <!--<tab-->
        <!--id="@+id/tab_favorites"-->
        <!--icon="@drawable/ic_favorites"-->
        <!--title="Favorites" />-->
    <!--<tab-->
        <!--id="@+id/tab_recents"-->
        <!--icon="@drawable/ic_recents"-->
        <!--title="Recents" />-->

</tabs>