<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLiteGrey"

    tools:context="bredesh.medico.Fragments.PersonalFragment">

    <TextView
        android:id="@+id/tvPersonalInfo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorAppBar"
        android:fontFamily="casual"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/personal_info"
        android:textColor="@color/colorWhite"
        android:textSize="32sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">


        <TextView
            android:id="@+id/tvFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorLetters"
            android:text="@string/FirstName" />

        <EditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="First Name"
            android:textColor="@color/colorLetters" />

        <TextView
            android:id="@+id/tvLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorLetters"
            android:text="@string/LastName" />

        <EditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="Last Name"
            android:textColor="@color/colorLetters" />

        <TextView
            android:id="@+id/tvEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorLetters"
            android:text="@string/EmailAddress" />

        <EditText
            android:id="@+id/etEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="Email Address"
            android:textColor="@color/colorLetters"/>

        <TextView
            android:id="@+id/tvPoints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorLetters"
            android:text="@string/Points" />

        <EditText
            android:id="@+id/etPoints"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="0 points"
            android:textColor="@color/colorLetters"/>

        <Button
            android:id="@+id/btAddPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/app_bar"
            android:layout_toEndOf="@+id/points"
            android:text="add_points" />

    </LinearLayout>

</FrameLayout>