<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="rtl"
    android:layout_marginBottom="5dp"
    cardview:cardCornerRadius="2dp"
    cardview:cardElevation="3dp"
    cardview:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@color/colorWhite"
        android:padding="10sp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvSUN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Sunday_short"
                android:textColor="@color/titleColor"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tvMON"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/Monday_Short"
                android:textColor="@color/titleColor"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tvTUE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/Tuesday_Short"
                android:textColor="@color/titleColor"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tvWED"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/Wednesday_Short"
                android:textColor="@color/titleColor"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tvTHU"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/Thursday_Short"
                android:textColor="@color/titleColor"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tvFRI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/Friday_Short"
                android:textColor="@color/titleColor"
                android:visibility="visible" />

            <TextView
                android:id="@+id/tvSAT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/Saturday_Short"
                android:textColor="@color/titleColor"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/imageRepeat"
                android:layout_width="20sp"
                android:layout_height="match_parent"
                android:layout_marginStart="20sp"
                android:scaleType="fitXY"
                android:src="@drawable/repeats" />

            <TextView
                android:id="@+id/lblExerciseNoOfRepeats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:textColor="@color/titleColor" />
        </LinearLayout>

        <Button
            android:id="@+id/btAlerts"
            android:layout_width="20sp"
            android:layout_height="match_parent"
            android:layout_marginStart="20sp"
            android:scaleType="fitXY"
            android:visibility="gone"
            android:src="@drawable/ic_alarm_black_48dp_green" />

        <TextView
            android:id="@+id/tvExercisesName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:maxEms="30"
            android:maxLength="50"
            android:maxLines="1"
            android:textColor="@color/titleColor"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvExerciseTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="10sp"
            android:maxEms="30"
            android:maxLength="50"
            android:textDirection="anyRtl"
            android:textColor="@color/titleColor"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/btPlay"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/button_round"
            android:src="@drawable/ic_play_circle_outline_black_24dp_blue"
            android:focusable="true" />


    </RelativeLayout>

</android.support.v7.widget.CardView>